# quant-engine

./: .gitignore  CLAUDE.md  main.py  main_screener.py  pyproject.toml  skills-lock.json
.agents/skills/alpaca-data/: SKILL.md
.agents/skills/alpaca-trading/: SKILL.md
.agents/skills/alpha-vantage/: SKILL.md
.agents/skills/backtesting/: SKILL.md
.agents/skills/barchart/: SKILL.md
.agents/skills/bcra-macro/: SKILL.md
.agents/skills/byma/: SKILL.md
.agents/skills/cafci/: SKILL.md
.agents/skills/cboe-data/: SKILL.md
.agents/skills/companiesmarketcap/: SKILL.md
.agents/skills/data912/: SKILL.md
.agents/skills/earningswhispers/: SKILL.md
.agents/skills/finnhub/: SKILL.md
.agents/skills/finviz/: SKILL.md
.agents/skills/google-finance/: SKILL.md
.agents/skills/indec/: SKILL.md
.agents/skills/investing/: SKILL.md
.agents/skills/macrotrends/: SKILL.md
.agents/skills/mae/: SKILL.md
.claude/: settings.local.json
config/: screener.toml  settings.toml
docs/: README.md
docs/stock_screener/: 01_overview.md  02_strategy.md  03_scoring.md  04_data_sources.md  05_architecture.md
experiments/cap_gradient/: __main__.py  analysis.py  config.py  data.py  report.py  runner.py  universe.py
src/backtest/: engine.py
src/data/: fetcher.py  preparation.py
src/reporting/: metrics.py  plots.py
src/screener/: __init__.py  composite.py  fetcher.py  filters.py  indicators.py  report.py  runner.py  universe.py
src/strategies/: base.py  funding_flush.py  liquidity_sweep.py  rsi_reversion.py
tests/: test_no_lookahead.py
(+179 files in other folders)
