[project]
name = "quant-engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ccxt>=4.5.44",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "pyarrow>=23.0.1",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.2.2",
    "requests>=2.32.5",
    "scipy>=1.10",
    "vectorbt>=0.28.2",
    "yfinance>=0.2.40",
    "tabulate>=0.9.0",
    "lxml>=5.0.0",
    "beautifulsoup4>=4.12.0",
]
